--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 	<head>
         <title>Intro to HTML and CSS</title>
         <meta charset="utf-8" />
@@ -77,7 +77,7 @@
                         </tr>
                     </table>
                 </div> <!-- end of table -->
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZG-S5Z38Ens" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZG-S5Z38Ens" allowfullscreen></iframe>
                 <div class="top"><h4><a href="#top">Go to top...</a></h4></div>
             </div>
 
